352. How to prepare (your brain) for the TensorFlow Developer Certification

--- a/11_tensorflow_exam_skills_checklist.ipynb
+++ b/11_tensorflow_exam_skills_checklist.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "11_tensorflow_exam_skills_checklist",
       "provenance": [],
-      "authorship_tag": "ABX9TyPAHVc8u5xREi1fRHmpjYs1",
+      "authorship_tag": "ABX9TyOM0NgvaMKRyCBv0bEQJsma",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,8 +34,93 @@
         "id": "-8fbclEDHYdu"
       },
       "source": [
-        "001"
+        "## 2. Building and training neural network models using TensorFlow 2.x.\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sUjv60Z98P8s",
+        "outputId": "75bf57bb-2fe8-46ee-f890-9da5b9ede5bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "\n",
+        "print(tf.__version__)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.6.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XH3RMHZt8Y2d",
+        "outputId": "eb449a47-f7ab-41b0-98bf-b001d73bc34f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from tensorflow.keras import datasets\n",
+        "(train_images, train_labels), (test_images, test_labels)  = datasets.fashion_mnist.load_data()"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
+            "32768/29515 [=================================] - 0s 0us/step\n",
+            "40960/29515 [=========================================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
+            "26427392/26421880 [==============================] - 0s 0us/step\n",
+            "26435584/26421880 [==============================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
+            "16384/5148 [===============================================================================================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
+            "4423680/4422102 [==============================] - 0s 0us/step\n",
+            "4431872/4422102 [==============================] - 0s 0us/step\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j5fE1xjh82xO"
+      },
+      "source": [
+        "# Preprocess the data\n",
+        "## .. normalize (get between 0 & 1)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MVGoHPXb88US"
+      },
+      "source": [
+        "# Build model\n",
+        "# Compile model\n",
+        "# Train model ..."
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
