--- a/12_pandas_introduction.ipynb
+++ b/12_pandas_introduction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "12_pandas_introduction",
       "provenance": [],
-      "authorship_tag": "ABX9TyPAHVc8u5xREi1fRHmpjYs1",
+      "authorship_tag": "ABX9TyMkIi2Uatc4HPKadOEAqvM/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,8 +34,519 @@
         "id": "-8fbclEDHYdu"
       },
       "source": [
-        "001"
+        "#Basic commands for pandas"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vfTeUDgOOY-E"
+      },
+      "source": [
+        "import pandas as pd"
+      ],
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fjaNqcu9ObdD"
+      },
+      "source": [
+        "# 2 main datatypes\n",
+        "series = pd.Series([\"BMW\", \"Toyota\", \"Honda\"])"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vdOzCfVWOj1W",
+        "outputId": "9930fb89-1b44-40ba-d8c2-59819bfd0baf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "series"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0       BMW\n",
+              "1    Toyota\n",
+              "2     Honda\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6hTFpEhiOlC5"
+      },
+      "source": [
+        "# series - 1 dimensional"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RFbQzIOqOny4",
+        "outputId": "e0b25d2a-93d0-41a4-ae39-a0c3985128c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "colors = pd.Series([\"Red\", \"Blue\", \"White\"])\n",
+        "colors"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0      Red\n",
+              "1     Blue\n",
+              "2    White\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k9EFCKQvOtRm",
+        "outputId": "02cf0049-019d-4d95-993c-63006bd02862",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 142
+        }
+      },
+      "source": [
+        "# DataFrame  = 2 dimensional\n",
+        "car_data = pd.DataFrame({\"Car make\" : series,\n",
+        "                         \"Color\" : colors})\n",
+        "car_data"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Car make</th>\n",
+              "      <th>Color</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>BMW</td>\n",
+              "      <td>Red</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Toyota</td>\n",
+              "      <td>Blue</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Honda</td>\n",
+              "      <td>White</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  Car make  Color\n",
+              "0      BMW    Red\n",
+              "1   Toyota   Blue\n",
+              "2    Honda  White"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iuTUw0RZO8si"
+      },
+      "source": [
+        "# Import data\n",
+        "car_sales = pd.read_csv(\"car-sales.csv\")"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NAX1eolqPzo8",
+        "outputId": "54136d45-8777-434c-ede0-306c472bc5c2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 359
+        }
+      },
+      "source": [
+        "car_sales"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Make</th>\n",
+              "      <th>Colour</th>\n",
+              "      <th>Odometer (KM)</th>\n",
+              "      <th>Doors</th>\n",
+              "      <th>Price</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Toyota</td>\n",
+              "      <td>White</td>\n",
+              "      <td>150043</td>\n",
+              "      <td>4</td>\n",
+              "      <td>$4,000.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Honda</td>\n",
+              "      <td>Red</td>\n",
+              "      <td>87899</td>\n",
+              "      <td>4</td>\n",
+              "      <td>$5,000.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Toyota</td>\n",
+              "      <td>Blue</td>\n",
+              "      <td>32549</td>\n",
+              "      <td>3</td>\n",
+              "      <td>$7,000.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>BMW</td>\n",
+              "      <td>Black</td>\n",
+              "      <td>11179</td>\n",
+              "      <td>5</td>\n",
+              "      <td>$22,000.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Nissan</td>\n",
+              "      <td>White</td>\n",
+              "      <td>213095</td>\n",
+              "      <td>4</td>\n",
+              "      <td>$3,500.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>Toyota</td>\n",
+              "      <td>Green</td>\n",
+              "      <td>99213</td>\n",
+              "      <td>4</td>\n",
+              "      <td>$4,500.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>Honda</td>\n",
+              "      <td>Blue</td>\n",
+              "      <td>45698</td>\n",
+              "      <td>4</td>\n",
+              "      <td>$7,500.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>Honda</td>\n",
+              "      <td>Blue</td>\n",
+              "      <td>54738</td>\n",
+              "      <td>4</td>\n",
+              "      <td>$7,000.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>Toyota</td>\n",
+              "      <td>White</td>\n",
+              "      <td>60000</td>\n",
+              "      <td>4</td>\n",
+              "      <td>$6,250.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>Nissan</td>\n",
+              "      <td>White</td>\n",
+              "      <td>31600</td>\n",
+              "      <td>4</td>\n",
+              "      <td>$9,700.00</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     Make Colour  Odometer (KM)  Doors       Price\n",
+              "0  Toyota  White         150043      4   $4,000.00\n",
+              "1   Honda    Red          87899      4   $5,000.00\n",
+              "2  Toyota   Blue          32549      3   $7,000.00\n",
+              "3     BMW  Black          11179      5  $22,000.00\n",
+              "4  Nissan  White         213095      4   $3,500.00\n",
+              "5  Toyota  Green          99213      4   $4,500.00\n",
+              "6   Honda   Blue          45698      4   $7,500.00\n",
+              "7   Honda   Blue          54738      4   $7,000.00\n",
+              "8  Toyota  White          60000      4   $6,250.00\n",
+              "9  Nissan  White          31600      4   $9,700.00"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L8G0FfY_P701"
+      },
+      "source": [
+        "# Exporting a dataframe\n",
+        "car_sales.to_csv(\"car-sales-exported.csv\", index=False)"
+      ],
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BwOU2N_EQcHj",
+        "outputId": "9f889d94-9135-4261-ff85-061837c5f01b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 359
+        }
+      },
+      "source": [
+        "# Import exported file\n",
+        "exported_car_sales = pd.read_csv(\"car-sales-exported.csv\")\n",
+        "exported_car_sales"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Make</th>\n",
+              "      <th>Colour</th>\n",
+              "      <th>Odometer (KM)</th>\n",
+              "      <th>Doors</th>\n",
+              "      <th>Price</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Toyota</td>\n",
+              "      <td>White</td>\n",
+              "      <td>150043</td>\n",
+              "      <td>4</td>\n",
+              "      <td>$4,000.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Honda</td>\n",
+              "      <td>Red</td>\n",
+              "      <td>87899</td>\n",
+              "      <td>4</td>\n",
+              "      <td>$5,000.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Toyota</td>\n",
+              "      <td>Blue</td>\n",
+              "      <td>32549</td>\n",
+              "      <td>3</td>\n",
+              "      <td>$7,000.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>BMW</td>\n",
+              "      <td>Black</td>\n",
+              "      <td>11179</td>\n",
+              "      <td>5</td>\n",
+              "      <td>$22,000.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Nissan</td>\n",
+              "      <td>White</td>\n",
+              "      <td>213095</td>\n",
+              "      <td>4</td>\n",
+              "      <td>$3,500.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>Toyota</td>\n",
+              "      <td>Green</td>\n",
+              "      <td>99213</td>\n",
+              "      <td>4</td>\n",
+              "      <td>$4,500.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>Honda</td>\n",
+              "      <td>Blue</td>\n",
+              "      <td>45698</td>\n",
+              "      <td>4</td>\n",
+              "      <td>$7,500.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>Honda</td>\n",
+              "      <td>Blue</td>\n",
+              "      <td>54738</td>\n",
+              "      <td>4</td>\n",
+              "      <td>$7,000.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>Toyota</td>\n",
+              "      <td>White</td>\n",
+              "      <td>60000</td>\n",
+              "      <td>4</td>\n",
+              "      <td>$6,250.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>Nissan</td>\n",
+              "      <td>White</td>\n",
+              "      <td>31600</td>\n",
+              "      <td>4</td>\n",
+              "      <td>$9,700.00</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     Make Colour  Odometer (KM)  Doors       Price\n",
+              "0  Toyota  White         150043      4   $4,000.00\n",
+              "1   Honda    Red          87899      4   $5,000.00\n",
+              "2  Toyota   Blue          32549      3   $7,000.00\n",
+              "3     BMW  Black          11179      5  $22,000.00\n",
+              "4  Nissan  White         213095      4   $3,500.00\n",
+              "5  Toyota  Green          99213      4   $4,500.00\n",
+              "6   Honda   Blue          45698      4   $7,500.00\n",
+              "7   Honda   Blue          54738      4   $7,000.00\n",
+              "8  Toyota  White          60000      4   $6,250.00\n",
+              "9  Nissan  White          31600      4   $9,700.00"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dPS7zxucQmDf"
+      },
+      "source": [
+        "## Describe data "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fsoN-MhvRGkN"
+      },
+      "source": [
+        "car_sales.dtypes"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
