404. NumPy Random Seed

--- a/13_numpy_introductions.ipynb
+++ b/13_numpy_introductions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "13_numpy_introductions",
       "provenance": [],
-      "authorship_tag": "ABX9TyMUpA9A36rTKGabTTgiyxIc",
+      "authorship_tag": "ABX9TyNTfTWsNO4FCxg7FmwTnXUp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -497,11 +497,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Fe5PGFjqAp7X",
-        "outputId": "08ab753f-59ce-40f1-bbf8-6da42b8f4f11",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Fe5PGFjqAp7X",
+        "outputId": "08ab753f-59ce-40f1-bbf8-6da42b8f4f11"
       },
       "source": [
         "sample_array = np.array([1, 2, 3])\n",
@@ -524,11 +524,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "P5ZqnvBLAvT-",
-        "outputId": "cce7e561-093c-4fc0-c8a5-f71df5a1e3e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "P5ZqnvBLAvT-",
+        "outputId": "cce7e561-093c-4fc0-c8a5-f71df5a1e3e7"
       },
       "source": [
         "sample_array.dtype"
@@ -550,11 +550,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jypaI4GrAxGF",
-        "outputId": "6ae96c62-5191-4cf7-9ff7-c674297151ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jypaI4GrAxGF",
+        "outputId": "6ae96c62-5191-4cf7-9ff7-c674297151ee"
       },
       "source": [
         "ones = np.ones((2, 3))\n",
@@ -578,11 +578,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MGU1MM8kBBMT",
-        "outputId": "421dc709-faf8-4f86-94aa-ccb60679d8ec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MGU1MM8kBBMT",
+        "outputId": "421dc709-faf8-4f86-94aa-ccb60679d8ec"
       },
       "source": [
         "ones.dtype"
@@ -604,11 +604,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vB5Blw0GBDBb",
-        "outputId": "ce18232b-c07a-4b7d-c1b6-3221be7fa0f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vB5Blw0GBDBb",
+        "outputId": "ce18232b-c07a-4b7d-c1b6-3221be7fa0f3"
       },
       "source": [
         "type(ones)"
@@ -641,11 +641,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JWSuN_SMBKdL",
-        "outputId": "76953bf0-df28-4fcb-b375-6acb6666849f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JWSuN_SMBKdL",
+        "outputId": "76953bf0-df28-4fcb-b375-6acb6666849f"
       },
       "source": [
         "zeros"
@@ -668,11 +668,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wy0o3_EVBMjf",
-        "outputId": "0f3022b4-d25d-4df8-c07d-c49447b8fd0b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wy0o3_EVBMjf",
+        "outputId": "0f3022b4-d25d-4df8-c07d-c49447b8fd0b"
       },
       "source": [
         "range_array = np.arange(0, 10, 2)\n",
@@ -695,11 +695,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "r_kANb2_BlNU",
-        "outputId": "cadf3ae7-2f96-4cb4-f440-6833ccb05ff5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "r_kANb2_BlNU",
+        "outputId": "cadf3ae7-2f96-4cb4-f440-6833ccb05ff5"
       },
       "source": [
         "random_array = np.random.randint(0, 10, size=(3, 5))\n",
@@ -724,11 +724,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "r7wEXOkHBTaI",
-        "outputId": "0e175e74-dbb7-44d5-809b-869e48472b1a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "r7wEXOkHBTaI",
+        "outputId": "0e175e74-dbb7-44d5-809b-869e48472b1a"
       },
       "source": [
         "random_array.shape"
@@ -750,11 +750,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bvlquYyYBzUH",
-        "outputId": "00487f0f-4267-4bf8-c2dc-a7c1afb1ea73",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bvlquYyYBzUH",
+        "outputId": "00487f0f-4267-4bf8-c2dc-a7c1afb1ea73"
       },
       "source": [
         "random_array.size"
@@ -776,11 +776,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_Mub9qgBB1P3",
-        "outputId": "714d34e4-8596-439a-9860-1ec2c6edf0d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_Mub9qgBB1P3",
+        "outputId": "714d34e4-8596-439a-9860-1ec2c6edf0d4"
       },
       "source": [
         "random_array_2 = np.random.random((5, 3))\n",
@@ -807,11 +807,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aZtWwFnyB_6_",
-        "outputId": "d3b20993-fcd4-45d0-c597-8b681c5506e9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aZtWwFnyB_6_",
+        "outputId": "d3b20993-fcd4-45d0-c597-8b681c5506e9"
       },
       "source": [
         "random_array_2.shape"
@@ -833,11 +833,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rEFBfDjrCC4G",
-        "outputId": "fc5f4b23-c58e-4be8-bff5-276181531eb7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rEFBfDjrCC4G",
+        "outputId": "fc5f4b23-c58e-4be8-bff5-276181531eb7"
       },
       "source": [
         "random_array_3 = np.random.rand(5, 3)\n",
@@ -864,11 +864,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eOMKLqfcCJWG",
-        "outputId": "c145e836-ec40-4d51-bd4a-33c47c7bf711",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eOMKLqfcCJWG",
+        "outputId": "c145e836-ec40-4d51-bd4a-33c47c7bf711"
       },
       "source": [
         "random_array_3.shape"
@@ -890,14 +890,125 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hRcTHnkBCmf4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hRcTHnkBCmf4",
+        "outputId": "4cb7dde7-4bbe-456d-b0e9-d3a5d4d0431e"
       },
       "source": [
         "# Pseudo-random numbers\n",
-        "np.random.seed()"
+        "np.random.seed(seed= 42)\n",
+        "\n",
+        "random_array_4 = np.random.randint(10, size=(5, 3))\n",
+        "random_array_4"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[6, 3, 7],\n",
+              "       [4, 6, 9],\n",
+              "       [2, 6, 7],\n",
+              "       [4, 3, 7],\n",
+              "       [7, 2, 5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_Hw1cr6RD6DE",
+        "outputId": "d451d620-178b-4c41-c864-f85bba79f6b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "np.random.seed(7)\n",
+        "random_array_5 = np.random.random((5, 3))\n",
+        "random_array_5"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.07630829, 0.77991879, 0.43840923],\n",
+              "       [0.72346518, 0.97798951, 0.53849587],\n",
+              "       [0.50112046, 0.07205113, 0.26843898],\n",
+              "       [0.4998825 , 0.67923   , 0.80373904],\n",
+              "       [0.38094113, 0.06593635, 0.2881456 ]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NiZQKCHvEB_w",
+        "outputId": "ae96e4bf-7aee-4970-bcd6-fcb58f9b4440",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "random_array_5 = np.random.random((5, 3))\n",
+        "random_array_5"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.20484909, 0.49076589, 0.37238469],\n",
+              "       [0.47740115, 0.36589039, 0.83791799],\n",
+              "       [0.76864751, 0.31399468, 0.57262533],\n",
+              "       [0.27604905, 0.45284293, 0.35297837],\n",
+              "       [0.65739946, 0.37035108, 0.45909298]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MDSSa6VvDTrk",
+        "outputId": "bf3f51ea-e4d2-47f2-bf33-12b250f313a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "random_array_4.shape"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(5, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
     }
   ]
 }
