405. Viewing Arrays and Matrices

--- a/13_numpy_introductions.ipynb
+++ b/13_numpy_introductions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "13_numpy_introductions",
       "provenance": [],
-      "authorship_tag": "ABX9TyNTfTWsNO4FCxg7FmwTnXUp",
+      "authorship_tag": "ABX9TyOA8IOdrXdbVE436SA2dSB/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -924,11 +924,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_Hw1cr6RD6DE",
-        "outputId": "d451d620-178b-4c41-c864-f85bba79f6b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_Hw1cr6RD6DE",
+        "outputId": "d451d620-178b-4c41-c864-f85bba79f6b8"
       },
       "source": [
         "np.random.seed(7)\n",
@@ -956,11 +956,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NiZQKCHvEB_w",
-        "outputId": "ae96e4bf-7aee-4970-bcd6-fcb58f9b4440",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NiZQKCHvEB_w",
+        "outputId": "ae96e4bf-7aee-4970-bcd6-fcb58f9b4440"
       },
       "source": [
         "random_array_5 = np.random.random((5, 3))\n",
@@ -987,11 +987,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MDSSa6VvDTrk",
-        "outputId": "bf3f51ea-e4d2-47f2-bf33-12b250f313a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MDSSa6VvDTrk",
+        "outputId": "bf3f51ea-e4d2-47f2-bf33-12b250f313a2"
       },
       "source": [
         "random_array_4.shape"
@@ -1007,6 +1007,297 @@
           },
           "metadata": {},
           "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AwBt17XLE2_b",
+        "outputId": "256c8a39-7080-4e26-c2c4-107e6c134d6d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "random_array_4"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[6, 3, 7],\n",
+              "       [4, 6, 9],\n",
+              "       [2, 6, 7],\n",
+              "       [4, 3, 7],\n",
+              "       [7, 2, 5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ada4ZYC6Er9L"
+      },
+      "source": [
+        "## 3. Viewing arrays and matrices"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hf6Olh0PEvSL",
+        "outputId": "5924287c-919b-498c-d591-98520431fdf6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "np.unique(random_array_4)"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([2, 3, 4, 5, 6, 7, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OjcyHjkHFa4X",
+        "outputId": "cf7a6ff3-299c-435d-b498-11a64b1e910e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a1[0]"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DcJd8LbZFdcv",
+        "outputId": "57d1b33b-a828-4e2c-8ed1-06107c45603d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a3"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[ 1,  2,  3],\n",
+              "        [ 4,  5,  6],\n",
+              "        [ 7,  8,  9]],\n",
+              "\n",
+              "       [[10, 11, 12],\n",
+              "        [13, 14, 15],\n",
+              "        [16, 17, 18]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t9a6rDZUFlR7",
+        "outputId": "f8f129d4-8d19-4a1e-d9c8-8882e061d489",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a3[:2, :2, :2]"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[ 1,  2],\n",
+              "        [ 4,  5]],\n",
+              "\n",
+              "       [[10, 11],\n",
+              "        [13, 14]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yVONVJ2iGBrM",
+        "outputId": "d3858e18-6bd4-4b36-ec85-5bdfebedd02e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a4 = np.random.randint(10, size=(2, 3, 4, 5))\n",
+        "a4"
+      ],
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[[1, 9, 5, 9, 1],\n",
+              "         [2, 3, 2, 2, 5],\n",
+              "         [7, 3, 0, 9, 9],\n",
+              "         [3, 4, 5, 3, 0]],\n",
+              "\n",
+              "        [[4, 8, 6, 7, 2],\n",
+              "         [7, 3, 8, 6, 6],\n",
+              "         [5, 6, 5, 7, 1],\n",
+              "         [5, 4, 4, 9, 9]],\n",
+              "\n",
+              "        [[0, 6, 2, 6, 8],\n",
+              "         [2, 4, 1, 6, 1],\n",
+              "         [5, 1, 6, 9, 8],\n",
+              "         [6, 5, 9, 7, 5]]],\n",
+              "\n",
+              "\n",
+              "       [[[4, 9, 6, 8, 1],\n",
+              "         [5, 5, 8, 3, 7],\n",
+              "         [7, 9, 4, 7, 5],\n",
+              "         [9, 6, 2, 0, 5]],\n",
+              "\n",
+              "        [[3, 0, 5, 7, 1],\n",
+              "         [8, 4, 9, 0, 2],\n",
+              "         [0, 7, 6, 2, 9],\n",
+              "         [9, 5, 1, 0, 0]],\n",
+              "\n",
+              "        [[9, 1, 1, 5, 3],\n",
+              "         [2, 0, 4, 8, 7],\n",
+              "         [1, 4, 9, 3, 6],\n",
+              "         [7, 1, 0, 2, 7]]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 68
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BJek_rBZGIvS",
+        "outputId": "635729b2-eb25-4437-d5ed-9f80690c20b0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a4.shape, a4.ndim"
+      ],
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((2, 3, 4, 5), 4)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dgtS6QldGK1m",
+        "outputId": "8b0196dc-ffc5-4b66-d51a-51e6eb0ec0a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Get the first 3 numbers of the inner most arrays\n",
+        "a4[:, :, :, :3]"
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[[1, 9, 5],\n",
+              "         [2, 3, 2],\n",
+              "         [7, 3, 0],\n",
+              "         [3, 4, 5]],\n",
+              "\n",
+              "        [[4, 8, 6],\n",
+              "         [7, 3, 8],\n",
+              "         [5, 6, 5],\n",
+              "         [5, 4, 4]],\n",
+              "\n",
+              "        [[0, 6, 2],\n",
+              "         [2, 4, 1],\n",
+              "         [5, 1, 6],\n",
+              "         [6, 5, 9]]],\n",
+              "\n",
+              "\n",
+              "       [[[4, 9, 6],\n",
+              "         [5, 5, 8],\n",
+              "         [7, 9, 4],\n",
+              "         [9, 6, 2]],\n",
+              "\n",
+              "        [[3, 0, 5],\n",
+              "         [8, 4, 9],\n",
+              "         [0, 7, 6],\n",
+              "         [9, 5, 1]],\n",
+              "\n",
+              "        [[9, 1, 1],\n",
+              "         [2, 0, 4],\n",
+              "         [1, 4, 9],\n",
+              "         [7, 1, 0]]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 71
         }
       ]
     }
