--- a/13_numpy_introductions.ipynb
+++ b/13_numpy_introductions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "13_numpy_introductions",
       "provenance": [],
-      "authorship_tag": "ABX9TyNn69NhNJbAgPPiAB0JFFIt",
+      "authorship_tag": "ABX9TyMEvAwQfEpWPgEDwLkwsb04",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1322,11 +1322,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "y4lEPEFEUoGU",
-        "outputId": "ee3b6e61-a8a5-4c73-eb39-0f124c8fbec1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "y4lEPEFEUoGU",
+        "outputId": "ee3b6e61-a8a5-4c73-eb39-0f124c8fbec1"
       },
       "source": [
         "a1"
@@ -1348,11 +1348,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mZQOTLlFUcsn",
-        "outputId": "bb0ac45d-69fc-4659-ce03-18ce634f3b50",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mZQOTLlFUcsn",
+        "outputId": "bb0ac45d-69fc-4659-ce03-18ce634f3b50"
       },
       "source": [
         "ones = np.ones(3)\n",
@@ -1375,11 +1375,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DVjGxYOsUt_r",
-        "outputId": "9e63c244-386e-418d-f84e-7fa526b29cd9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DVjGxYOsUt_r",
+        "outputId": "9e63c244-386e-418d-f84e-7fa526b29cd9"
       },
       "source": [
         "a1 + ones"
@@ -1401,11 +1401,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t31YvducUzvz",
-        "outputId": "20943120-278b-4ee4-b1a8-0ffe8d02aeb8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "t31YvducUzvz",
+        "outputId": "20943120-278b-4ee4-b1a8-0ffe8d02aeb8"
       },
       "source": [
         "a1 - ones"
@@ -1427,11 +1427,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ModgTcl3U7-4",
-        "outputId": "721c2356-6393-40d9-fe1e-7a6a5d2fa86e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ModgTcl3U7-4",
+        "outputId": "721c2356-6393-40d9-fe1e-7a6a5d2fa86e"
       },
       "source": [
         "a1 * ones"
@@ -1453,11 +1453,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8jVSjxejVANn",
-        "outputId": "2d9f75d7-8ea6-40f7-907f-4d5f95099398",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8jVSjxejVANn",
+        "outputId": "2d9f75d7-8ea6-40f7-907f-4d5f95099398"
       },
       "source": [
         "a1"
@@ -1479,11 +1479,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NQLxhQKPU2m3",
-        "outputId": "935aef49-2b64-4b65-96e3-0311f3f04e98",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NQLxhQKPU2m3",
+        "outputId": "935aef49-2b64-4b65-96e3-0311f3f04e98"
       },
       "source": [
         "a2"
@@ -1506,11 +1506,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uVKMyvpnU3o5",
-        "outputId": "eacf4d0e-5ccf-4cbd-8a5d-157fad2296a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uVKMyvpnU3o5",
+        "outputId": "eacf4d0e-5ccf-4cbd-8a5d-157fad2296a3"
       },
       "source": [
         "a1 * a2"
@@ -1533,11 +1533,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dpH25SIXVGHn",
-        "outputId": "17235052-826c-4bc7-f555-d4398292f78e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dpH25SIXVGHn",
+        "outputId": "17235052-826c-4bc7-f555-d4398292f78e"
       },
       "source": [
         "\n",
@@ -1591,11 +1591,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kWfwRT_dXmsK",
-        "outputId": "d083b08a-7ea2-4635-8c90-838e70fd3ab2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kWfwRT_dXmsK",
+        "outputId": "d083b08a-7ea2-4635-8c90-838e70fd3ab2"
       },
       "source": [
         "a1 / ones"
@@ -1617,11 +1617,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NrM8f5xuXoUm",
-        "outputId": "a7e3355c-3533-4692-b508-8494a978a2fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NrM8f5xuXoUm",
+        "outputId": "a7e3355c-3533-4692-b508-8494a978a2fb"
       },
       "source": [
         "a2 / a1"
@@ -1644,11 +1644,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QhOzqnhDXqj5",
-        "outputId": "c4976c85-2d43-4457-c5e5-4e010ca00a77",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QhOzqnhDXqj5",
+        "outputId": "c4976c85-2d43-4457-c5e5-4e010ca00a77"
       },
       "source": [
         "# Floor division removes the decimals\n",
@@ -1672,11 +1672,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g3K9_GutXvnT",
-        "outputId": "2fe8cac4-a7ab-4a44-ddaf-98910342ab14",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "g3K9_GutXvnT",
+        "outputId": "2fe8cac4-a7ab-4a44-ddaf-98910342ab14"
       },
       "source": [
         "a2 ** 2"
@@ -1699,11 +1699,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LOCzUuj_X1J7",
-        "outputId": "c1712359-2dc8-4408-9bd1-dd5eefa0bcb8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LOCzUuj_X1J7",
+        "outputId": "c1712359-2dc8-4408-9bd1-dd5eefa0bcb8"
       },
       "source": [
         "np.add(a1, ones)\n"
@@ -1725,11 +1725,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Feyb1pXwX3j2",
-        "outputId": "4fdb8b84-4600-45da-c078-e90846d75e6d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Feyb1pXwX3j2",
+        "outputId": "4fdb8b84-4600-45da-c078-e90846d75e6d"
       },
       "source": [
         "a1 % 2"
@@ -1751,11 +1751,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9eTqFa4tX59_",
-        "outputId": "50f5be01-7fba-44e1-dc5f-f67f49741418",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9eTqFa4tX59_",
+        "outputId": "50f5be01-7fba-44e1-dc5f-f67f49741418"
       },
       "source": [
         "a1 / 2"
@@ -1777,11 +1777,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "klw5B_7JX7hd",
-        "outputId": "6e03888b-6eb3-4725-f42a-f3a320fe2e62",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "klw5B_7JX7hd",
+        "outputId": "6e03888b-6eb3-4725-f42a-f3a320fe2e62"
       },
       "source": [
         "a1 % 2"
@@ -1803,11 +1803,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0yxxUfw_YCFW",
-        "outputId": "1cd465c2-7d95-42e8-faa3-9cfd5d10dc3c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0yxxUfw_YCFW",
+        "outputId": "1cd465c2-7d95-42e8-faa3-9cfd5d10dc3c"
       },
       "source": [
         "np.exp(a1)"
@@ -1829,11 +1829,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aQ1O8BwCYD5D",
-        "outputId": "3b9b89cd-84a5-4d13-c9ee-8525c2b130de",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aQ1O8BwCYD5D",
+        "outputId": "3b9b89cd-84a5-4d13-c9ee-8525c2b130de"
       },
       "source": [
         "np.log(a1)"
@@ -1849,6 +1849,345 @@
           },
           "metadata": {},
           "execution_count": 137
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jN9Hs5J3YegM"
+      },
+      "source": [
+        "### Aggregation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q-YqwyaSYic-",
+        "outputId": "99913984-9573-4e55-e4b4-a6630af60baf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "listy_list = [1, 2, 3]\n",
+        "type(listy_list)"
+      ],
+      "execution_count": 138,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 138
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YNbKFCXtYnBr",
+        "outputId": "5cb4e180-d572-4e24-c7c2-123b8a28b94c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "sum(listy_list)"
+      ],
+      "execution_count": 139,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 139
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8bJ6wtZHYpkG",
+        "outputId": "1bd9699c-f984-45ba-91dc-2040d253af6a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "np.sum(a1)"
+      ],
+      "execution_count": 140,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 140
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eDqpG_adYuWC"
+      },
+      "source": [
+        "Use Python's method `(sum())` on Python datatypes and use Numpy's method on Numpy arrays `(np.sum())`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "exPMNEHFY-Ce",
+        "outputId": "0320181b-7aac-4e0f-913d-6a1e3f284187",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Create a massive NumPy array\n",
+        "massive_array = np.random.random(100000)\n",
+        "massive_array.size"
+      ],
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "100000"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 142
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OzL_YrAhZFsa",
+        "outputId": "fdc478fa-27fc-4a23-c6ee-d593daeb73ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "massive_array[:10]"
+      ],
+      "execution_count": 143,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.19753289, 0.44152974, 0.71923214, 0.84534516, 0.16827531,\n",
+              "       0.66496896, 0.80783546, 0.54971412, 0.16471666, 0.0355288 ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 143
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JA0I6xE7ZLYe",
+        "outputId": "966e0256-3145-47fd-a5cc-175999e36766",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%timeit sum(massive_array) # Python's sum()\n",
+        "%timeit np.sum(massive_array) # Numpy's sum()"
+      ],
+      "execution_count": 144,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100 loops, best of 5: 17.7 ms per loop\n",
+            "The slowest run took 30.45 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+            "10000 loops, best of 5: 31.8 µs per loop\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_rUttjHVZYLm",
+        "outputId": "04bff6fe-4b67-4e83-82c3-5ef31785da43",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a2"
+      ],
+      "execution_count": 145,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1. , 2. , 3.3],\n",
+              "       [4. , 5. , 6.5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 145
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qU7J5or1ZlJS",
+        "outputId": "6891a8ef-237d-43fa-fb62-f8b9c1beef58",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "np.mean(a2)"
+      ],
+      "execution_count": 146,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.6333333333333333"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 146
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YvMWWgxWZnbN",
+        "outputId": "a2129071-9b5f-40e8-e61f-18db444fe643",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "np.max(a2), np.min(a2)"
+      ],
+      "execution_count": 147,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(6.5, 1.0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 147
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XGrj0KkEZrQl",
+        "outputId": "ad537983-97ca-452d-aca6-832b6b493c1d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Standard deviation = a measure of how spread our a group of numbers is from mean\n",
+        "np.std(a2)"
+      ],
+      "execution_count": 148,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.8226964152656422"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 148
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aQbSIEzPZu9R",
+        "outputId": "de3b811b-2fd4-421b-cd8e-602ed6c80d18",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Variance = measure of the average degree to which each number is different\n",
+        "# Higher variance = wider range of numbers\n",
+        "# Lower variance = lower range of numbers\n",
+        "np.var(a2)"
+      ],
+      "execution_count": 149,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.3222222222222224"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 149
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6QkpS3qzZwo6",
+        "outputId": "7f178e8b-9953-4cca-b796-0b381f13b5e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "np.sqrt(np.var(a2))"
+      ],
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.8226964152656422"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 150
         }
       ]
     }
